# second_project

./: .md  README.md  pyproject.toml
data/: 14.1_main.py  14.2_main.py  15.1_main.py  16.1_main.py  16.2_main.py  17.1_main.py
src/: main.py  web.py
templates/: catalogue.html  category_1.html  contacts.html  main.html
tests/: test_main.py
