[tool.poetry]
name = "second-project"
version = "0.1.0"
description = ""
authors = ["lyudmila batainekh <blsumbb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
flake8 = "^7.3.0"
black = "^25.1.0"
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
